src/test/success/multiple_variable_declaration.egern
var a = b = x = 4;
print(a);
print(b);
print(x);
