src/test/fail/calling_undeclared_function_fail.egern
var a = 4
var b = square(a)
print(b)
